package NBlenderOnlineLearning.NProto;

import "kernel/blender/online_learning/protos/util.proto";

option go_package = "a.yandex-team.ru/kernel/blender/online_learning/protos";
message TLearningMetrics {
    optional float Cost = 1;
    optional float ReqCount = 2;
    optional float GradNorm = 3;
    optional float Surplus = 4;
    optional float Wins = 5;
    optional TFloatVector Coverage = 6;
    optional uint64 UnweightedReqCount = 8;  // todo: uint64
    optional uint64 BatchCount = 9;
}

message TMetrics {
    map<string, TLearningMetrics> LearningMetrics = 1;
    optional uint64 LastProcessedRecordTimestamp = 2;

    // here we can add other metrics: technical, monitoring, etc
}
